Install husky and add hooks

--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "start": "node dist",
     "start:dev": "node --watch dist",
     "test": "npx jest",
-    "test:coverage": "npx jest --coverage --watchAll=false --passWithNoTests"
+    "test:coverage": "npx jest --coverage --watchAll=false --passWithNoTests",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "husky": "^8.0.0"
+  }
 }
