--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "build": "npx tsc",
     "build:dev": "npx tsc -w",
     "start": "node dist",
     "start:dev": "node --watch dist",
-    "test": "npx jest",
+    "test": "npx jest --passWithNoTests",
     "test:coverage": "npx jest --coverage --watchAll=false --passWithNoTests",
     "prepare": "husky install"
   },
@@ -16,6 +17,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "husky": "^8.0.0"
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.14.6",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-config-xo": "^0.43.1",
+    "eslint-config-xo-typescript": "^0.56.0",
+    "husky": "^8.0.0",
+    "prettier": "^2.8.4",
+    "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "chalk": "^5.2.0",
+    "express": "^4.18.2"
   }
 }
