--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-xo-typescript": "^0.56.0",
     "husky": "^8.0.0",
     "jest-ts-webcompat-resolver": "^1.0.0",
+    "lint-staged": "^13.1.2",
     "prettier": "^2.8.4",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
