--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.13",
+    "@types/debug": "^4.1.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
     "@types/morgan": "^1.9.4",
@@ -38,8 +39,10 @@
   "dependencies": {
     "chalk": "^5.2.0",
     "cors": "^2.8.5",
+    "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^7.0.1",
     "morgan": "^1.10.0"
   }
 }
