Test CustomError class

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "build:dev": "npx tsc -w",
     "start": "node dist",
     "start:dev": "node --watch dist",
-    "test": "npx jest --passWithNoTests",
-    "test:coverage": "npx jest --coverage --watchAll=false --passWithNoTests",
+    "test": "npx jest",
+    "test:dev": "jest --watchAll",
+    "test:coverage": "npx jest --coverage --watchAll=false",
     "prepare": "husky install"
   },
   "keywords": [],
