Add createGame controller

--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -19,6 +19,9 @@ jobs:
         run: npm run test:coverage
         env:
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+          SUPABASE_ID: ${{ secrets.SUPABASE_ID }}
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
