--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.10.0",
     "bcryptjs": "^2.4.3",
     "chalk": "^5.2.0",
     "cors": "^2.8.5",
