--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -19,6 +19,7 @@ jobs:
         run: npm run test:coverage
         env:
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          MONGODB_CONNECTION_URL: ${{ secrets.MONGODB_CONNECTION_URL }}
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
           SUPABASE_ID: ${{ secrets.SUPABASE_ID }}
